Updated index, added imgs.

--- a/style.css
+++ b/style.css
@@ -510,7 +510,7 @@ th {
     background: rgba(0, 0, 0, 0) url("http://placehold.it/1854x722") no-repeat scroll center top / cover;
 }
 .caracraft-minimal-header {
-    background: rgba(0, 0, 0, 0) url("http://placehold.it/1854x722") no-repeat scroll center top / cover;
+    background: rgba(0, 0, 0, 0) url("portfolio/img/mountain.JPG") no-repeat scroll center top / cover;
 }
 .caracraft-dark-header {
     background: rgba(0, 0, 0, 0) url("http://placehold.it/1854x722") no-repeat scroll center top / cover;
